# borges

./: .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.yml  dump.sql  env-example
.sqlx/: query-0b41f46d66caeb4b7d1bc46bb4b629ec131eb69f0bf2d166b30deb8d9c1f7f19.json  query-693a947da59dc11f7d9a5e6ae969c98299b6c02f6327aa385fc9cd5a476f7878.json  query-8772cf1d8d217238bf73d7b2c296540e51b24d16ffefb5626cb5bab75226c5b3.json  query-91356a86b8cd35699e77b133ca071319a14e931b6f379f0659475b7e9427f56c.json  query-e1fde4f845648bdf455a14db21c1f6aef6d957d709d4b4c7f1ceabc2700765ca.json  query-e49ee0997e39d656d0156a4ec38ea458f37f14e5b423190c85529215af7ef17b.json  query-f024f0d09f859d8837239ccb3d93b834f26ce0ec91df0e6de7874855aa5e5774.json  query-f126793a7a508a4c1551997aaa807205b6f2cfbfa63ec7df5f5ec095188cd038.json
migrations/: 20230812205424_create_seed_data.sql  20230923030933_create_book_status.sql
src/: books_api.rs  graphql.rs  lib.rs  main.rs  repository.rs
tests/: approval.rs
tests/snapshots/: approval__graphql.snap  approval__inner-2.snap  approval__inner-5.snap  approval__inner.snap  approval__inner@add_note_mutation.snap  approval__inner@all_books_query.snap  approval__inner@book_query.snap  approval__inner@book_status_mutation.snap  approval__inner@invalid_book_id_note_mutation.snap  approval__inner@invalid_book_id_status_mutation.snap  approval__inner@invalid_page_note_mutation.snap  approval__inner@read_books_query.snap
