[package]
name = "borges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-graphql = { version = "6.0.0", features = ["dataloader"] }
async-graphql-axum = "6.0.0"
axum = { version = "0.6.19", features = ["tracing"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
serde = "1.0.180"
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
