[package]
name = "borges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-graphql = { version = "6.0.7", features = ["dataloader", "log"] }
async-graphql-axum = "6.0.7"
axum = { version = "0.6.20", features = ["tracing"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
hyper = "0.14.27"
insta = { version = "1.32.0", features = ["json"] }
tower = "0.4.13"
